update oauth and error handling
